--- a/GameTests/GameTests.csproj
+++ b/GameTests/GameTests.csproj
@@ -17,4 +17,8 @@
         <PackageReference Include="coverlet.collector" Version="6.0.0"/>
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\HW01-2024\HW01-2024.csproj" />
+    </ItemGroup>
+
 </Project>
